fixed Contact display on mobile

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -20,6 +20,7 @@
   align-items: center;
 }
 
+
 .text h2 {
   font-size: 80px;
   font-weight: 700;
@@ -69,5 +70,18 @@
   .links {
     grid-template-columns: 1fr 1fr;
     justify-items: center;
+  }
+  .text h2 {
+    font-size: 30px;
+    font-weight: 700;
+    letter-spacing: 4px;
+    margin: 0;
+  }
+  .link a {
+    color: var(--color-text);
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 400;
+    letter-spacing: 1.5px;
   }
 }
